[tool.poetry]
name = "stlib-api"
version = "0.1.0"
description = ""
authors = ["2018008068 <aza1200@naver.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "stlib-api"}]

[tool.poetry.dependencies]
python = "^3.9"
pyjwt = "^2.6.0"
django-environ = "^0.9.0"
dj-database-url = "^1.0.0"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"
django = "4.0"
djangorestframework = "3.13"


[build-system]
requires = ["poetry-core","setuptools"]
build-backend = "poetry.core.masonry.api"
